=== HEAD

* Make Dataset#order_append the primary method, and #order_more the alias, for similarity to #select_append and #select_more (jeremyevans)

* Replace internal uses of Dataset#filter with Dataset#where to save a method call (jeremyevans)

* Do not set :auto_increment in the schema information for integer columns that are part of a composite primary key on SQLite (jeremyevans)

* Use autoincrement setting on integer primary key columns when emulating table modification methods on SQLite (thenrio, jeremyevans) (#1277, #1278)

* Make the pagination extension work on frozen datasets (jeremyevans)

* Make Dataset#server work for frozen model datasets using the sharding plugin (jeremyevans)

* Make Dataset#nullify in the null_dataset extension work on frozen datasets (jeremyevans)

* Make Model#set_server work when using a frozen model dataset (jeremyevans)

* Make Dataset#ungraphed work on a frozen model dataset (jeremyevans)

* Add Dataset#with_{autoid,fetch,numrows} to the mock adapter, returning cloned datasets with the setting changed (jeremyevans)

* Make looser_typecasting extension handle the strict BigDecimal parsing introduced in ruby 2.4rc1 (jeremyevans)

* Make Database#{db,opts}= in the sequel_3_dataset_methods extension raise for frozen datasets (jeremyevans)

* Speed up repeated calls to Dataset#{interval,range} for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Speed up repeated calls to Dataset#get with a single argument for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Speed up repeated calls to Dataset#{first,last} with arguments/blocks for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Speed up repeated calls to Dataset#{avg,min,max,sum} for frozen datasets using a cached placeholder literalizer (jeremyevans)

* Cache dataset returned by Dataset#skip_locked for frozen datasets (jeremyevans)
