@@ -1,8 +1,10 @@
 === HEAD
 
+* Replace internal uses of Dataset#select_more with #select_append to save a method call (jeremyevans)
+
 * Make Dataset#order_append the primary method, and #order_more the alias, for similarity to #select_append and #select_more (jeremyevans)
 
-* Replace internal uses of Dataset#filter with Dataset#where to save a method call (jeremyevans)
+* Replace internal uses of Dataset#filter with #where to save a method call (jeremyevans)
 
 * Do not set :auto_increment in the schema information for integer columns that are part of a composite primary key on SQLite (jeremyevans)
 
